# openai_lib

./: .gitignore  Makefile  driver.py  main.py  pyproject.toml  requirements.txt  utils.py
src/openai_lib/: __init__.py  client.py  template_expander.py
tests/: instr-test-pub-tool-calling.txt  older_test.py  test.py  tool-call.yaml
